<?xml version="1.0"?>
<package format="2">
  <name>roboticarts_msgs</name>
  <version>0.0.0</version>
  <description>The roboticarts_msgs package</description>

  <author email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</author>
  <maintainer email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>std_srvs</build_depend>
  <exec_depend>std_srvs</exec_depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
